initialization-dimensions/IC-0.txt
main.cpp:59:10: error: expected expression
    T u =;
         ^
main.cpp:64:8: warning: empty parentheses interpreted as a function declaration [-Wvexing-parse]
    T o();
       ^~
main.cpp:64:8: note: remove parentheses to declare a variable
    T o();
       ^~
main.cpp:65:12: error: expected expression
    T u = ();
           ^
1 warning and 2 errors generated.
